Revision history for {{$dist->name}}

{{$NEXT}}

2.16      2017-06-22 12:59:51 -0400
  - Require plicease plugin 2.16

2.15      2017-06-11 21:41:41 -0400
  - Tweaks for Perl 5.26

2.14      2017-06-09 11:37:34 -0400
  - Require plicease plugin 2.14

2.12      2017-03-22 12:00:32 -0400
  - Require plicease plugin 2.12
  - Do not try to use Git plugins on windows

2.11      2017-01-23 14:01:04 -0500
  - Require plicease plugin 2.11

2.10      2016-10-04 12:44:17 -0400
  - Require plicease plugin 2.10

2.09      2016-07-12 08:40:39 -0400
  - Require plicease plugins 2.09

2.08      2016-07-12 08:36:33 -0400
  - Warn when travis is not testing 5.24

2.07      2016-06-23 08:43:39 -0400
  - Fixed bug where minting profile was failing on fresh install

2.06      2016-05-10 21:25:31 -0400
  - Require [Author::Plicease] 2.06

2.05      2016-05-10 10:17:15 -0400
  - Require [Author::Plicease] 2.05

2.04      2016-05-03 06:10:01 -0400
  - Require [Author::Plicease] 2.04

2.03      2016-04-24 19:08:40 -0400
  - Dist::Zilla 6.x compatability

2.02      2016-03-08 09:52:18 -0500
  - Move the mint mechanisms into the non bundle dist

2.01      2016-03-08 09:19:07 -0500
  - Spun off most of the Author::Plicease::* plugins (except Init2.pm)
    into Dist::Zilla::Plugin::Author::Plicease

2.00      2016-02-11 04:00:00 -0500
  - Require Dist::Zilla::App::Command::aliendeps

1.99      2016-02-04 11:02:04 -0500
  - Bump [Alien] prereq to 0.023

1.98      2016-01-29 09:58:40 -0500
  - Add alien_bin_requires as diagnostic

1.97      2016-01-28 12:08:31 -0500
  - Add [Alien] as a prereq
  - Add [PkgVersion::Block] as a prereq where available
  - Add dictionary for additional correct words

1.96      2016-01-16 16:28:30 -0500
  - Fixes for generated .appveyor.yml

1.95      2016-01-06 14:47:45 -0500
  - Support for appveyor

1.94      2015-12-20 15:15:03 -0700
  - skip xt/release/pod_coverage.t on 5.8
    I've been getting false positives on Alien::Base