@@ -23,7 +23,10 @@ except = .travis.yml
 format = %-9v %{yyyy-MM-dd HH:mm:ss Z}d
 
 [AutoPrereqs]
+
 [OurPkgVersion]
+underscore_eval_version = 1
+
 [MetaJSON]
 
 [Git::Check]
